# secure-file-share

./: docker-compose.yml  readme.md
backend/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/core/: middleware.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
backend/core/tests/: test_auth.py  test_file_upload.py  test_sharing.py
backend/core/utils/: encryption.py  jwt_tools.py  mfa_temp_store.py  totp.py  validators.py
backend/securefileshare/: asgi.py  settings.py  wsgi.py
frontend/: Dockerfile  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: FileList.tsx  Login.tsx  MFAConfirm.tsx  MFASetup.tsx  Register.tsx  ShareFile.tsx  UploadFile.tsx
frontend/src/store/: authSlice.ts  fileSlice.ts  index.ts  shareSlice.ts
frontend/src/styles/: app.css
frontend/src/utils/: api.ts  crypto.ts  validator.ts
